--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <script>
           function redirectToPage() {
-            window.location.href = "EMPRESA"; // Redirige a la siguiente página;
+            window.location.href = "EMPRESA.html"; // Redirige a la siguiente página;
         }
     </script>
 </body>
