--- a/EMPRESA.html
+++ b/EMPRESA.html
@@ -9,7 +9,7 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0px;
     padding: 0px;
-    background-image: url('C:/Users/jhonh/Documents/PAGINA WEB FINAL/PRINCIPA/IMAG-VIDE'); 
+    background-image: url('fugos.jpg'); 
     background-size: cover; 
     background-repeat: no-repeat; 
     background-position: center;
@@ -165,7 +165,7 @@ body {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         margin: 0px;
         padding: 0px;
-        background-image: url("C:/Users/jhonh/Documents/PAGINA WEB FINAL/PRINCIPA/IMAG-VIDE/fugos.jpg"); 
+        background-image: url("fugos.jpg"); 
         background-size: cover; 
         background-repeat: no-repeat; 
         background-position: center;
@@ -639,11 +639,11 @@ header {
 <body>
     <div class="logo-text">
         <p>AUTOMOTO</p>
-        <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\logo automoto.png" alt="Logo de la empresa">  
+        <img src="logo automoto.png" alt="Logo de la empresa">  
         <p>CHACHAPOYAS</p>
     </div>
 
-    <audio id="backgroundMusic" src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\YouTube_qUeJ8rjmm1c.mp3" autoplay loop>
+    <audio id="backgroundMusic" src="YouTube_qUeJ8rjmm1c.mp3" autoplay loop>
         Tu navegador no soporta el elemento de audio.
     </audio>
 
