--- a/EMPRESA.html
+++ b/EMPRESA.html
@@ -669,19 +669,19 @@ header {
     <main>
         <div class="image-slider">
             <div class="slide">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\moto negra.jpg" alt="Imagen 1">
+                <img src="moto negra.jpg" alt="Imagen 1">
                 <div class="slide-text">LO MEJOR EN MOTOS Y MODELOS</div>
             </div>
             <div class="slide">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\TRANSPORTE-MOTOS.jpg" alt="Imagen 2">
+                <img src="TRANSPORTE-MOTOS.jpg" alt="Imagen 2">
                 <div class="slide-text">TRANSPORTE DE MOTOS</div>
             </div>
             <div class="slide">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\auto amarillo.jpg" alt="Imagen 2">
+                <img src="auto amarillo.jpg" alt="Imagen 2">
                 <div class="slide-text">LO MEJOR EN AUTOS Y MODELOS</div>
             </div>
             <div class="slide">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\carga auto.jpg" alt="Imagen 2">
+                <img src="carga auto.jpg" alt="Imagen 2">
                 <div class="slide-text">TRASPORTE DE AUTOS</div>
             </div>
         </div>
@@ -718,7 +718,7 @@ header {
         <br><br>
         <div class="video-container">
             <video class="video" autoplay muted loop>
-                <source src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\motos vid.mp4" type="video/mp4">
+                <source src="motos vid.mp4" type="video/mp4">
                 Tu navegador no soporta la reproducción de videos.
             </video><br><br><br>
             <div class="container" style="text-align: justify;">
@@ -734,7 +734,7 @@ header {
             ¡¡¡ Ven y descubre por qué AUTOMOTO CACHAPOYAS es la mejor opción para la venta de autos y motos!!!</p>
         </div><br><br><br>
             <video class="video" autoplay muted loop>
-                <source src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\autos.mp4" type="video/mp4">
+                <source src="autos.mp4" type="video/mp4">
                 Tu navegador no soporta la reproducción de videos.
             </video>
         </div>
@@ -772,7 +772,7 @@ header {
                 <p><strong>Dirección:</strong> JRN. Salamanca 322</p>
             </div>
             <div class="eu-info">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\logo.png" alt="EU Logo">
+                <img src="logo.png" alt="EU Logo">
                 <p>IMPORTADOS DE EE.UU Y CHINA</p>
                 <p>NEW GENERATION</p>
                 <p>Plan de Transformación y Mejora</p>
@@ -793,10 +793,10 @@ header {
                             ACCESIBILIDAD</a>
             </div>
             <div class="social-links">
-                <a href="https://www.facebook.com/profile.php?id=100081344626108"><img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\fefe.png" alt="Facebook"></a>
-                <a href="https://www.instagram.com/jhonhardin_2003/"><img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\instre.jpg" alt="Instagram"></a>
-                <a href="https://www.youtube.com/@jhonh6226"><img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\youtub3.jpg" alt="YouTube"></a>
-                <a href="https://bit.ly/JHONHDJ"><img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\wtas.jpg" alt="WhatsApp"></a>
+                <a href="https://www.facebook.com/profile.php?id=100081344626108"><img src="fefe.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/jhonhardin_2003/"><img src="instre.jpg" alt="Instagram"></a>
+                <a href="https://www.youtube.com/@jhonh6226"><img src="youtub3.jpg" alt="YouTube"></a>
+                <a href="https://bit.ly/JHONHDJ"><img src="wtas.jpg" alt="WhatsApp"></a>
             </div>
         </div>
         <div class="footer-credit">
