--- a/EMPRESA.html
+++ b/EMPRESA.html
@@ -796,7 +796,7 @@ header {
                 <a href="https://www.facebook.com/profile.php?id=100081344626108"><img src="fefe.png" alt="Facebook"></a>
                 <a href="https://www.instagram.com/jhonhardin_2003/"><img src="instre.jpg" alt="Instagram"></a>
                 <a href="https://www.youtube.com/@jhonh6226"><img src="youtub3.jpg" alt="YouTube"></a>
-                <a href="https://bit.ly/JHONHDJ"><img src="wtas.jpg" alt="WhatsApp"></a>
+                <a href="https://wa.link/i3gcoe"><img src="wtas.jpg" alt="WhatsApp"></a>
             </div>
         </div>
         <div class="footer-credit">
