--- a/EMPRESA.html
+++ b/EMPRESA.html
@@ -654,14 +654,14 @@ header {
                     <li class="dropdown">
                         <span id="inicio">INICIO</span>
                         <div class="dropdown-content" id="dropdownContent">
-                            <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/MSIION/MISION.html">MISION</a>
-                            <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/VISION3/VISION.html">VISION</a>
-                            <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/DESARROLO/DESARROLO.html">DESARROLLO</a>
+                            <a href="MISION.html">MISION</a>
+                            <a href="VISION.html">VISION</a>
+                            <a href="DESARROLO.html">DESARROLLO</a>
                         </div>
                     </li>
-                <li><a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/PRINCIPAL.html">COMPRAR</a></li>
-                <li><a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/CONTACTTO/CONTACTO.html#contacto">CONTACTO</a></li>
-                <li><a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/INICIAR%20SESIÓN.html">INICIAR SESIÓN</a></li>
+                <li><a href="PRINCIPAL.html">COMPRAR</a></li>
+                <li><a href="CONTACTO.html">CONTACTO</a></li>
+                <li><a href="INICIAR SESIÓN.html">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
