--- a/EMPRESA.html
+++ b/EMPRESA.html
@@ -656,7 +656,7 @@ header {
                         <div class="dropdown-content" id="dropdownContent">
                             <a href="MISION.html">MISION</a>
                             <a href="VISION.html">VISION</a>
-                            <a href="DESARROLO.html">DESARROLLO</a>
+                            <a href="DESARROLLO.html">DESARROLLO</a>
                         </div>
                     </li>
                 <li><a href="PRINCIPAL.html">COMPRAR</a></li>
