--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -7,7 +7,7 @@ body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("C:/Users/jhonh/Documents/PAGINA WEB FINAL/PRINCIPA/IMAG-VIDE/relapago.jpg"); /* Ruta de la imagen de fondo */
+            background-image: url("relapago.jpg"); /* Ruta de la imagen de fondo */
             background-size: cover; /* Cubrir todo el contenido */
             background-repeat: no-repeat; /* No repetir la imagen */
         }
@@ -104,16 +104,16 @@ body {
 </head>
 <body>.
     <header>
-        <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\logo.png" alt="Logo de la plataforma">
-        <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/EMPRESA.html">
+        <img src="logo.png" alt="Logo de la plataforma">
+        <a href="EMPRESA.html">
             <button>"AUTOMOTO<br>
                 CHACHAPOYAS"</button>
     </header>
     
     <main>
         <div class="paralelogramo">
-            <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/CATALOGO%20MOTOS.html" onclick="delayRedirect(event, this)">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\pexels-leon-kohle-3158283-13350017.jpg" alt="Imagen 1">
+            <a href="CATALOGO MOTOS.html" onclick="delayRedirect(event, this)">
+                <img src="pexels-leon-kohle-3158283-13350017.jpg" alt="Imagen 1">
                 <div class="texto">
                     "MOTOS"
                 </div>
@@ -121,8 +121,8 @@ body {
         </div>
 
         <div class="paralelogramo">
-            <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/CATALOGO%20AUTOS.html" onclick="delayRedirect(event, this)">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\pexels-anewevisual-7537127.jpg" alt="Imagen 2">
+            <a href="CATALOGO MOTOS.html" onclick="delayRedirect(event, this)">
+                <img src="pexels-anewevisual-7537127.jpg" alt="Imagen 2">
                 <div class="texto">
                     "AUTOS"
                 </div>
