--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -122,7 +122,7 @@ body {
 
         <div class="paralelogramo">
             <a href="CATALOGO MOTOS.html" onclick="delayRedirect(event, this)">
-                <img src="pexels-anewevisual-7537127.jpg" alt="Imagen 2">
+                <img src="https://github.com/JhonH-DJ/PAGINA-AUTOMOTO/edit/main/PRINCIPAL.htmlhttps://github.com/JhonH-DJ/PAGINA-AUTOMOTO/edit/main/PRINCIPAL.html" alt="Imagen 2">
                 <div class="texto">
                     "AUTOS"
                 </div>
