--- a/VISION3/VISION.html
+++ b/VISION3/VISION.html
@@ -5,6 +5,82 @@
     <title>Vision de Venta de Motos y Autos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+    <style>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: url("fugos.jpg");
+    background-size: cover; 
+    font-size: 25px;
+    color: #ffffff;
+    text-shadow: 
+            0 0 5px #00bfff, /* Sombra azul */
+            0 0 10px #00bfff, /* Sombra azul */
+            0 0 20px #00bfff, /* Sombra azul */
+            0 0 40px #00bfff, /* Sombra azul */
+            0 0 80px #00bfff, /* Sombra azul */
+            0 0 160px #00bfff; /* Sombra azul */
+        }
+
+header h1 {
+    margin: 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 1rem;
+}
+
+nav ul li a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+main {
+    padding: 2rem;
+    background-color: #ffffff28;
+    margin: 5rem auto;
+    max-width: 800px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    size: 20px;
+}
+
+main h2 {
+    color: #ffffff;
+    text-shadow: 
+            0 0 5px #00bfff, /* Sombra azul */
+            0 0 10px #00bfff, /* Sombra azul */
+            0 0 20px #00bfff, /* Sombra azul */
+            0 0 40px #00bfff, /* Sombra azul */
+            0 0 80px #00bfff, /* Sombra azul */
+            0 0 160px #00bfff; /* Sombra azul */
+        }
+
+
+footer {
+    text-align: center;
+    padding: 1rem 0;
+    background-color: #333;
+    color: #fff;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+
+        
+    </style>
 <body>
     <main>
         <section id="mission">
