--- a/MSIION/MISION.html
+++ b/MSIION/MISION.html
@@ -10,7 +10,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: url("fugos.jpg");
+    background: url("tarde.jpg");
     background-size: cover; 
     font-size: 25px;
     color: #ffffff;
