--- a/AUTO/CATALOGO AUTOS.html
+++ b/AUTO/CATALOGO AUTOS.html
@@ -10,11 +10,11 @@
     <header>
         <div class="hero">
             <div class="image-container">
-                <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\auto amarillo.jpg" alt="Hero Image" id="heroImage">
+                <img src="auto amarillo.jpg" alt="Hero Image" id="heroImage">
                 <div class="points">
-                    <span class="point active" data-image="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\aunto crem.jpg"></span>
-                    <span class="point" data-image="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\auto naranja.jpg"></span>
-                    <span class="point" data-image="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\pexels-anewevisual-7537127.jpg"></span>
+                    <span class="point active" data-image="aunto crem.jpg"></span>
+                    <span class="point" data-image="auto naranja.jpg"></span>
+                    <span class="point" data-image="pexels-anewevisual-7537127.jpg"></span>
                 </div>
             </div>
         </div>
@@ -47,37 +47,37 @@
             <h2>Catálogo de Vehículos</h2>
             <div class="catalog">
                 <div class="vehicle-card">
-            <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\LAMBORGHINI Aventador LP740-4 S\adsf.png" alt="Modelo de vehículo 1">
+            <img src="LAMBORGHINI Aventador LP740-4 S\adsf.png" alt="Modelo de vehículo 1">
                     <h3>LAMBORGHINI Aventador LP740-4 S</h3>
                     <p>Año: 2018</p>
                     <p>Precio:S/. 1 890,690.00</p>
                 </div>
                 <div class="vehicle-card">
-                    <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\Ferrari 430 F430 2008 cupé\1.png" alt="Modelo de vehículo 2">
+                    <img src="Ferrari 430 F430 2008 cupé\1.png" alt="Modelo de vehículo 2">
                     <h3>Ferrari 430 F430 2008 cupé</h3>
                     <p>Año: 2021</p>
                     <p>Precio:S/. 2 197 437.87 </p>
                 </div>
                 <div class="vehicle-card">
-                    <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\Ferrari SF90 Spider 2024 convertible 2D\12.png" alt="Modelo de vehículo 3">
+                    <img src="Ferrari SF90 Spider 2024 convertible 2D\12.png" alt="Modelo de vehículo 3">
                     <h3>Ferrari SF90 Spider 2024</h3>
                     <p>Año: 2022</p>
                     <p>Precio:S/. 2 483 890.79</p>
                 </div>
                 <div class="vehicle-card">
-                    <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\LAMBORGHINI Huracán STO RWD\as.png" alt="Modelo de vehículo 4">
+                    <img src="LAMBORGHINI Huracán STO RWD\as.png" alt="Modelo de vehículo 4">
                     <h3>LAMBORGHINI Huracán STO RWD</h3>
                     <p>Año: 2019</p>
                     <p>Precio:S/. 1 378 382.00</p>
                 </div>
                 <div class="vehicle-card">
-                    <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\LAMBORGHINI Aventador LP770-4 SVJ\qed.png" alt="Modelo de vehículo 5">
+                    <img src="LAMBORGHINI Aventador LP770-4 SVJ\qed.png" alt="Modelo de vehículo 5">
                     <h3>LAMBORGHINI Aventador LP770-4 SVJ</h3>
                     <p>Año: 2020</p>
                     <p>Precio: 2 285 295.79</p>
                 </div>
                 <div class="vehicle-card">
-                    <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\AUTO\Ferrari 458 Italia 2010\asfc.png " alt="Modelo de vehículo 6">
+                    <img src="Ferrari 458 Italia 2010\asfc.png " alt="Modelo de vehículo 6">
                     <h3>Ferrari 458 Italia 2010</h3>
                     <p>Año: 2022</p>
                     <p>Precio:S/. 1 638 672.52
