--- a/PRINCIPAL.html
+++ b/PRINCIPAL.html
@@ -121,7 +121,7 @@ body {
         </div>
 
         <div class="paralelogramo">
-            <a href="CATALOGO MOTOS.html" onclick="delayRedirect(event, this)">
+            <a href="CATALOGO AUTOS.html" onclick="delayRedirect(event, this)">
                 <img src="pexels-anewevisual-7537127.jpg" alt="Imagen 2">
                 <div class="texto">
                     "AUTOS"
