--- a/INICIAR SESIÓN.html
+++ b/INICIAR SESIÓN.html
@@ -27,7 +27,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-image: url("C:/Users/jhonh/Documents/PAGINA WEB FINAL/PRINCIPA/IMAG-VIDE/Sesion.jpg"); /* Reemplaza con la URL de tu imagen */
+        background-image: url("Sesion.jpg"); /* Reemplaza con la URL de tu imagen */
         background-size: cover;
         background-position: center;
         animation: movimientoFondo 15s infinite alternate; /* Animación de movimiento */
