--- a/INICIAR SESIÓN.html
+++ b/INICIAR SESIÓN.html
@@ -138,7 +138,7 @@ header {
 </head>
 <body>
     <header>
-        <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/INTRO.html">"VOLVER A VER INTRO"</a>
+        <a href="index.html">"VOLVER A VER INTRO"</a>
     </header>
     
 
