--- a/CONTACTO.html
+++ b/CONTACTO.html
@@ -9,23 +9,23 @@
 <body>
     <div class="logo-text">
         <p>AUTOMOTO</p>
-        <img src="C:\Users\jhonh\Documents\PAGINA WEB FINAL\PRINCIPA\IMAG-VIDE\logo automoto.png" alt="Logo de la empresa">  
+        <img src="logo automoto.png" alt="Logo de la empresa">  
         <p>CHACHAPOYAS</p>
     </div>
     <header>
         <nav>
             <ul>
                     <li class="dropdown">
-                        <a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/PRINCIPA/EMPRESA.html" id="inicio">INICIO</a>
+                        <a href="EMPRESA.html" id="inicio">INICIO</a>
                         <div class="dropdown-content" id="dropdownContent">
                             <a href="MISION.html">MISION</a>
                             <a href="VISION.html">VISION</a>
                             <a href="DESARROLLO.html">DESARROLLO</a>
                         </div>
                     </li>
-                <li><a href="file:///C:/Users/jhonh/Documents/PAGINA%20WEB%20FINAL/PRINCIPAL.html">COMPRAR</a></li>
+                <li><a href="PRINCIPAL.html">COMPRAR</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
-                <li><a href="file:///C:/Users/jhonh/OneDrive/Documentos/PAGINA%20WEB%20FINAL/INICIAR%20SESIÓN.html">INICIAR SESIÓN</a></li>
+                <li><a href="INICIAR SESIÓN.html">INICIAR SESIÓN</a></li>
             </ul>
         </nav>
     </header>
