--- a/CONTACTO.html
+++ b/CONTACTO.html
@@ -9,7 +9,7 @@
 <body>
     <div class="logo-text">
         <p>AUTOMOTO</p>
-        <img src="logo automoto.png" alt="Logo de la empresa">  
+        <img src="logo.png" alt="Logo de la empresa">  
         <p>CHACHAPOYAS</p>
     </div>
     <header>
@@ -20,7 +20,7 @@
                         <div class="dropdown-content" id="dropdownContent">
                             <a href="MISION.html">MISION</a>
                             <a href="VISION.html">VISION</a>
-                            <a href="DESARROLLO.html">DESARROLLO</a>
+                            <a href="DESARROLO.html">DESARROLLO</a>
                         </div>
                     </li>
                 <li><a href="PRINCIPAL.html">COMPRAR</a></li>
